Created both Python & R Notebook

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 Notebooks/.ipynb_checkpoints/PJ-checkpoint.ipynb
 Notebooks/.ipynb_checkpoints/Employee-Satisfaction-Index-CA-checkpoint.ipynb
+.DS_Store
+Notebooks/.ipynb_checkpoints/Employee-Satisfaction-in-Python-MC-checkpoint.ipynb
+Notebooks/.ipynb_checkpoints/Employee-Satisfaction-in-R-MC-checkpoint.ipynb
