--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Notebooks/.ipynb_checkpoints/Employee-Satisfaction-Index-CA-checkpoint.ipynb
 Notebooks/.ipynb_checkpoints/Employee-Satisfaction-in-Python-MC-checkpoint.ipynb
 Notebooks/.ipynb_checkpoints/Employee-Satisfaction-in-R-MC-checkpoint.ipynb
 
+Media/.ES-Tableau-5.1-MC.png.icloud
